tools/kustomize/overlays/dev/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: hello
          ports:
            - containerPort: 5678
