tools/kustomize/overlays/dev/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
      name: hello-svc
