tools/kustomize/overlays/dev/ingress_patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - host: hello.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port:
                number: 80
